--- a/Infrastrucuture/appsettings.json
+++ b/Infrastrucuture/appsettings.json
@@ -1,5 +1,11 @@
 {
+    "AllowedHosts": "*",
     "ConnectionStrings": {
         "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=RepositoryPatternV1;Trusted_Connection=True;MultipleActiveResultSets=true"
-    }
+    },
+    //"Logging": {
+    //    "LogLevel": {
+    //        "Default": "Warning"
+    //    }
+    //}
 }
